# git-tools

./: .gitignore  PLAN-file-context-menu.md  README.md  build.bat  features.json  index.html  package-lock.json  package.json  prompt.md  run_app.bat  tsconfig.json  vite.config.ts.timestamp-1770307817986-acac20e5900db.mjs
.claude/: settings.local.json
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  cargo_errors.txt  error.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_engine.rs  main.rs  models.rs  settings.rs  terminal.rs
src-tauri/src/commands/: ai_commands.rs  conflict_commands.rs  diff_commands.rs  rebase_commands.rs  settings_commands.rs  terminal_commands.rs
src-tauri/src/git/: encoding.rs  mod.rs  service.rs  types.rs
src/components/: BranchExplorer.svelte  CommitGraph.svelte  CommitPanel.svelte  ConflictEditor.svelte  ConflictList.svelte  Conflicts.svelte  CreateBranchDialog.svelte  FileHistoryPanel.svelte  GitCommandCenter.svelte  GlobalConfirmation.svelte  RepoManager.svelte  RepoSelector.svelte  SettingsView.svelte  TabBar.svelte  TerminalPanel.svelte  ToastContainer.svelte  Workspace.svelte
src/components/blame/: BlameView.svelte
src/components/commit/: CommitActions.svelte  CommitFileList.svelte  ConflictResolveModal.svelte  DiffToolbar.svelte  DiffViewer.svelte  GlobalDiffViewer.svelte  GraphWipPanel.svelte  InlineDiffViewer.svelte  SideBySideDiffViewer.svelte
src/components/common/: BranchContextMenu.svelte  CommitContextMenu.svelte  FileChangeStatusBadge.svelte  PromptDialog.svelte  StashCommitContextMenu.svelte  branch-context-menu-types.ts  commit-context-menu-types.ts  stash-commit-context-menu-types.ts
src/components/diff/: DiffToolbar.svelte  DiffView.svelte  InlineDiffViewer.svelte  SideBySideDiffViewer.svelte  diff-viewer-types.ts
src/components/rebase/: RebaseEditor.svelte  RebaseProgress.svelte
src/components/resize/: ResizablePanel.svelte  ResizablePanes.svelte  ResizableSection.svelte
src/lib/: GitCommandService.ts  GitService.ts  action-utils.ts  branch-utils.ts  commit-graph-helpers.ts  confirmation.svelte.ts  create-branch-dialog.svelte.ts  diff-types.ts  diff-utils.ts  diff.ts  file-change.ts  git-diff-parser.ts  git-errors.ts  git.ts  graph-colors.ts  graph-config.ts  graph-layout.ts  lcs.ts  prompt.svelte.ts  rebaseStore.ts  toast.svelte.ts  types.ts
ui/: package-lock.json
(+11 files in other folders)
