[package]
name = "git-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }


[build-dependencies]
tauri-build = { version = "2", features = [] }
