[package]
name = "git-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 0          # No optimization (fastest compile, least RAM)
codegen-units = 256    # Many small units = less RAM per unit
incremental = true     # Reuse previous compilation artifacts

[profile.dev.package."*"]
opt-level = 0          # No optimization for deps either (saves RAM during LLVM phase)
codegen-units = 1      # Single codegen unit = minimal peak RAM for large crates like windows
